package eapli.base.categorymanagement.domain.repositories;

import eapli.base.categorymanagement.domain.Category;
import eapli.framework.domain.repositories.DomainRepository;

import java.util.Optional;

public interface CategoryRepository extends DomainRepository<Integer, Category> {


}
