@startuml
'https://plantuml.com/sequence-diagram


CategoryUI --> CategoryController
CategoryController --> CategoryService
CategoryService --> CategoryRepository

class CategoryUI{
 +doShow()
 +headLine()
}
class CategoryController{
-CategoryService
}
class CategoryService{
-CategoryPersist
}
interface CategoryRepository{

}
@enduml